--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,11 +1,11 @@
-CXX=mpic++
+CXX=CC #mpic++
 BIN=bin
 OBJ=obj
 SRC=src
 IDIR=include
 TESTS=tests
-CXXFLAGS= -O0 -g
-
+CXXFLAGS= -O2 -g
+LIBPATH=/software/projects/pawsey0001/cdipietrantonio/kmeans/cpp
 .PHONY : directories all tests clean
 
 all : directories tests
@@ -24,7 +24,7 @@ _DEPS = kmeans.hpp
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
 $(BIN)/tests : $(TESTS)/tests.cpp $(DEPS)
-	$(CXX) $(CXXFLAGS) -o $@ $< -lmpi
+	$(CXX) $(CXXFLAGS) -o $@ $< # -L$(LIBPATH)/obj -lmap-sampler-pmpi -lmap-sampler -Wl,--eh-frame-hdr -Wl,-rpath=$(LIBPATH)/obj -lmpi
 
 $(OBJ)/%.o : $(SRC)/%.cpp $(DEPS)
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
